--- a/doc/presentation/final/sections/001_introduction.tex
+++ b/doc/presentation/final/sections/001_introduction.tex
@@ -6,8 +6,10 @@
 
   \begin{itemize}
   \item Open American National Corpus (ONAC)
-  \item Tokenizing
-  \item Tagging
+  \item Tagging \& NE Chunking
   \item Analyse mit Hearst Patterns
+  \item Filtern mit WordNet
+  \item Finden von neuen Regeln anhand des Wörterbuchs
+  \item Itteratives Lernen neuer Regeln
   \end{itemize}
 \end{frame}
