removed hearst pattern picture

--- a/doc/presentation/final/sections/003_hearst_patterns.tex
+++ b/doc/presentation/final/sections/003_hearst_patterns.tex
@@ -2,109 +2,7 @@
 \label{sec:hearst-patterns}
 
 \begin{frame}
-  \frametitle{Hearst Patterns - Automat}
-
-  \begin{center}
-    \scalefont{0.5}
-    \begin{tikzpicture}[scale=0.13]
-      \tikzstyle{every node}+=[inner sep=0pt]
-      \draw [black] (5,-28.9) circle (3);
-      \draw (5,-28.9) node {$S$};
-      \draw [black] (17.9,-28.9) circle (3);
-      \draw (17.9,-28.9) node {$H_0$};
-      \draw [black] (42.1,-28.9) circle (3);
-      \draw (42.1,-28.9) node {$C_0$};
-      \draw [black] (42.1,-43.4) circle (3);
-      \draw (42.1,-43.4) node {$C_1$};
-      \draw [black] (18.3,-14.2) circle (3);
-      \draw (18.3,-14.2) node {$C_2$};
-      \draw [black] (29.2,-3.3) circle (3);
-      \draw (29.2,-3.3) node {$C_3$};
-      \draw [black] (13.8,-3.3) circle (3);
-      \draw (13.8,-3.3) node {$C_4$};
-      \draw [black] (42.1,-54.6) circle (3);
-      \draw (42.1,-54.6) node {$H_1$};
-      \draw [black] (42.1,-54.6) circle (2.4);
-      \draw [black] (25.5,-54.6) circle (3);
-      \draw (25.5,-54.6) node {$C_4$};
-      \draw [black] (5,-3.3) circle (3);
-      \draw (5,-3.3) node {$H_2$};
-      \draw [black] (5,-3.3) circle (2.4);
-      \draw [black] (15.831,-31.046) arc (-55.16876:-124.83124:7.67);
-      \fill [black] (15.83,-31.05) -- (14.89,-31.09) -- (15.46,-31.91);
-      \draw (11.45,-32.92) node [below] {$NP$};
-      \draw [black] (7.368,-27.083) arc (117.70959:62.29041:8.778);
-      \fill [black] (7.37,-27.08) -- (8.31,-27.15) -- (7.84,-26.27);
-      \draw (11.45,-25.58) node [above] {$*$};
-      \draw [black] (20.9,-28.9) -- (39.1,-28.9);
-      \fill [black] (39.1,-28.9) -- (38.3,-28.4) -- (38.3,-29.4);
-      \draw (30,-28.4) node [above] {$such$};
-      \draw [black] (20.47,-30.44) -- (39.53,-41.86);
-      \fill [black] (39.53,-41.86) -- (39.1,-41.02) -- (38.58,-41.88);
-      \draw (25.01,-36.65) node [below] {$C_1WORD$};
-      \draw [black] (17.98,-25.9) -- (18.22,-17.2);
-      \fill [black] (18.22,-17.2) -- (17.7,-17.98) -- (18.7,-18.01);
-      \draw (18.64,-21.56) node [right] {$,$};
-      \draw [black] (20.85,-15.78) -- (39.55,-27.32);
-      \fill [black] (39.55,-27.32) -- (39.13,-26.48) -- (38.6,-27.33);
-      \draw (27.95,-22.05) node [below] {$such$};
-      \draw [black] (21.078,-13.076) arc (107.57972:-29.21493:19.308);
-      \fill [black] (43.76,-40.91) -- (44.59,-40.45) -- (43.72,-39.96);
-      \draw (42.43,-17.85) node [right] {$C_1WORD$};
-      \draw [black] (15.335,-13.826) arc (290.55169:2.55169:2.25);
-      \draw (12.06,-9.15) node [left] {$,$};
-      \fill [black] (16.79,-11.62) -- (16.98,-10.69) -- (16.04,-11.05);
-      \draw [black] (20.42,-12.08) -- (27.08,-5.42);
-      \fill [black] (27.08,-5.42) -- (26.16,-5.63) -- (26.87,-6.34);
-      \draw (24.27,-10.23) node [right] {$C_3WORD$};
-      \draw [black] (6.249,-26.174) arc (152.33321:123.3916:28.222);
-      \fill [black] (6.25,-26.17) -- (7.06,-25.7) -- (6.18,-25.23);
-      \draw (9.78,-18.89) node [left] {$*$};
-      \draw [black] (26.2,-3.3) -- (16.8,-3.3);
-      \fill [black] (16.8,-3.3) -- (17.6,-3.8) -- (17.6,-2.8);
-      \draw (21.5,-2.8) node [above] {$other$};
-      \draw [black] (4.787,-25.91) arc (-179.74084:-267.03856:22.582);
-      \fill [black] (4.79,-25.91) -- (5.28,-25.11) -- (4.28,-25.11);
-      \draw (10.43,-8.83) node [left] {$*$};
-      \draw [black] (4.549,-25.936) arc (-174.61364:-223.32718:26.377);
-      \fill [black] (4.55,-25.94) -- (4.97,-25.09) -- (3.98,-25.19);
-      \draw (5.1,-14.15) node [left] {$*$};
-      \draw [black] (42.1,-31.9) -- (42.1,-40.4);
-      \fill [black] (42.1,-40.4) -- (42.6,-39.6) -- (41.6,-39.6);
-      \draw (41.6,-36.15) node [left] {$as$};
-      \draw [black] (40.626,-31.51) arc (-33.63783:-146.36217:20.511);
-      \fill [black] (6.47,-31.51) -- (6.5,-32.45) -- (7.33,-31.9);
-      \draw (23.55,-41.16) node [below] {$*$};
-      \draw [black] (42.1,-46.4) -- (42.1,-51.6);
-      \fill [black] (42.1,-51.6) -- (42.6,-50.8) -- (41.6,-50.8);
-      \draw (41.6,-49) node [left] {$NP$};
-      \draw [black] (39.538,-44.958) arc (-62.28378:-160.41087:23.957);
-      \fill [black] (5.83,-31.78) -- (5.62,-32.7) -- (6.57,-32.37);
-      \draw (18.77,-46.58) node [below] {$*$};
-      \draw [black] (39.1,-54.6) -- (28.5,-54.6);
-      \fill [black] (28.5,-54.6) -- (29.3,-55.1) -- (29.3,-54.1);
-      \draw (33.8,-54.1) node [above] {$C_4WORD$};
-      \draw [black] (27.598,-52.471) arc (127.06204:52.93796:10.29);
-      \fill [black] (40,-52.47) -- (39.66,-51.59) -- (39.06,-52.39);
-      \draw (33.8,-49.89) node [above] {$NP$};
-      \draw [black] (39.508,-56.107) arc (-63.36859:-186.05383:24.266);
-      \fill [black] (4.5,-31.86) -- (3.92,-32.6) -- (4.91,-32.7);
-      \draw (13.86,-54.86) node [below] {$*$};
-      \draw [black] (22.64,-53.698) arc (-110.65835:-172.18535:27.271);
-      \fill [black] (5.24,-31.89) -- (4.86,-32.75) -- (5.85,-32.61);
-      \draw (10.38,-46.61) node [left] {$*$};
-      \draw [black] (10.8,-3.3) -- (8,-3.3);
-      \fill [black] (8,-3.3) -- (8.8,-3.8) -- (8.8,-2.8);
-      \draw (9.4,-2.8) node [above] {$NP$};
-      \draw [black] (3.806,-26.149) arc (-159.52789:-200.47211:28.733);
-      \fill [black] (3.81,-26.15) -- (3.99,-25.22) -- (3.06,-25.57);
-      \draw (1.49,-16.1) node [left] {$*$};
-    \end{tikzpicture}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Hearst Patterns - Beispiele}
+  \frametitle{Hearst Patterns}
 
   \begin{itemize}
   \item NP(,)\{0,1\} (such as$\vert$like)
