--- a/doc/presentation/final/main.tex
+++ b/doc/presentation/final/main.tex
@@ -10,6 +10,7 @@
 \usepackage{color}
 \usepackage{listings}
 \usepackage{scalefnt}
+\usepackage{listings}
 %\usepackage{pgfpages}
 
 \usetheme{Rochester}
