new section order

--- a/doc/presentation/final/sections/001_introduction.tex
+++ b/doc/presentation/final/sections/001_introduction.tex
@@ -2,14 +2,13 @@
 \label{sec:ueberblick}
 
 \begin{frame}
-  \frametitle{Überblick}
+  \frametitle{Überblick - Zielsetzung}
 
   \begin{itemize}
-  \item Open American National Corpus (ONAC)
-  \item Tagging \& NE Chunking
-  \item Analyse mit Hearst Patterns
-  \item Filtern mit WordNet
-  \item Finden von neuen Regeln anhand des Wörterbuchs
-  \item Itteratives Lernen neuer Regeln
+  \item Extraktion von Hypernymen und Hyponymen aus natürlicher
+    Sprache.
+  \item Verwendung von Hearst Patterns.
+  \item Entwicklung eines Lernverfahrens um Extraktionsregeln zu
+    lernen.
   \end{itemize}
 \end{frame}
