--- a/doc/presentation/final/sections/001_introduction.tex
+++ b/doc/presentation/final/sections/001_introduction.tex
@@ -1,14 +1,14 @@
-\section{Überblick}
-\label{sec:ueberblick}
+\section{Zielsetzung}
+\label{sec:zielsetzung}
 
 \begin{frame}
-  \frametitle{Überblick - Zielsetzung}
+  \frametitle{Zielsetzung}
 
   \begin{itemize}
   \item Extraktion von Hypernymen und Hyponymen aus natürlicher
-    Sprache.
-  \item Verwendung von Hearst Patterns.
+    Sprache
+  \item Verwendung von Hearst Patterns
   \item Entwicklung eines Lernverfahrens um Extraktionsregeln zu
-    lernen.
+    erzeugen
   \end{itemize}
 \end{frame}
