--- a/doc/presentation/final/sections/002_hearst_patterns.tex
+++ b/doc/presentation/final/sections/002_hearst_patterns.tex
@@ -22,6 +22,16 @@
     \end{itemize}
 
   \end{itemize}
+
+  \let\thefootnote\relax\footnote{\cite{Hearst:1992}}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Hearst Patterns - Ergebnisse}
+
+  \begin{itemize}
+  \item TODO
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
