--- a/doc/presentation/final/sections/004_learning.tex
+++ b/doc/presentation/final/sections/004_learning.tex
@@ -86,7 +86,9 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Ergebnisse}
+  \frametitle{Ergebnisse - Itteration 1}
 
-  TODO
+  \begin{itemize}
+  \item 
+  \end{itemize}
 \end{frame}
