--- a/doc/presentation/final/sections/004_learning.tex
+++ b/doc/presentation/final/sections/004_learning.tex
@@ -1,18 +1,17 @@
 \section{Lernen von Regeln}
-\label{sec:itteratives-lernen}
+\label{sec:iteratives-lernen}
 
 \begin{frame}
   \frametitle{Lernen von Regeln - Überblick}
 
   \begin{itemize}
-  \item Initiales Wörterbuch
-  \item Generierung durch Hearst Pattern \& WordNet
+  \item Initiales Wörterbuch, generiert durch Hearst Pattern \& WordNet
   \item Lernen von Regeln
     \begin{itemize}
-    \item Wörterbuch verwenden um Regeln zu finden
+    \item Wörterbuch verwenden, um Regeln zu finden
     \item Pendel-Algorithmus verwenden um neues Wissen aus gefundenen
       Regeln zu generieren \cite{Biemann:2003}
-    \item Wissen verwenden um neues Wörterbuch zu erzeugen
+    \item Wissen verwenden, um neues Wörterbuch zu erzeugen
     \item Wiederholen bis kein neues Wissen mehr erzeugt wird
     \end{itemize}
   \end{itemize}
@@ -88,7 +87,7 @@
 \section{Ergebnisse \& Fazit}
 
 \begin{frame}
-  \frametitle{Ergebnisse - Itteration 1}
+  \frametitle{Ergebnisse - Iteration 1}
 
   \begin{itemize}
   \item 2 Regeln
@@ -103,7 +102,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Ergebnisse - Itteration 2}
+  \frametitle{Ergebnisse - Iteration 2}
 
   \begin{itemize}
   \item 156 Regeln
@@ -125,13 +124,13 @@
   \frametitle{Fazit}
 
   \begin{itemize}
-  \item Itteration 3 ergab 3.084 Regeln
+  \item Iteration 3 ergab 3.084 Regeln
   \item Starkes Wachstum neuer Daten pro Iteration
-  \item Lernen dauert dauert dadurch zu Lange
+  \item Lernen dauert dadurch zu lange
   \item Ausblick:
     \begin{itemize}
     \item Wissen nicht nur anhand eines Schwellwerts generieren
-    \item Verwendung einer guten Blacklist zum aussortieren von Regeln
+    \item Verwendung einer guten Blacklist zum Aussortieren von Regeln
     \item Implementierung weiterer Filter um schlechte Regeln zu entfernen
     \item Entwicklung von Algorithmen zur Erkennung schlechter Regeln
     \end{itemize}
