--- a/doc/presentation/final/sections/002_hearst_patterns.tex
+++ b/doc/presentation/final/sections/002_hearst_patterns.tex
@@ -8,17 +8,17 @@
   \item NP(,)\{0,1\} (such as$\vert$like)
     NP((,$\vert$ or$\vert$ and)\{0,1\} NP)*
     \begin{itemize}
-    \item ... car like Audi or Mercedes ...
+    \item ... animal like cats or dogs ...
     \end{itemize}~\\
 
   \item Such(,)\{0,1\} NP as NP((,$\vert$ or$\vert$ and) NP)*
     \begin{itemize}
-    \item Such car as Audi and Mercedes ...
+    \item Such animal as cats and dogs ...
     \end{itemize}~\\
 
   \item NP((,$\vert$ or$\vert$ and) NP)* and  other NP
     \begin{itemize}
-    \item Audi or Mercedes and other cars ...
+    \item Cats or dogs and other animals ...
     \end{itemize}
 
   \end{itemize}
