--- a/doc/presentation/final/sections/003_tagging.tex
+++ b/doc/presentation/final/sections/003_tagging.tex
@@ -1,4 +1,4 @@
-\section{Tagging \& NE Chungking}
+\section{Tagging \& NE Chunking}
 
 \begin{frame}
   \frametitle{Tagging \& NE Chunking}
@@ -11,7 +11,7 @@
   \item Erkennung von bekannten Namen -- Städte, Personen, etc.\\(\textbf{named
     entity chunking})
   \item Die erzeugte Baumstruktur wird in eine flache Liste
-    zurückgefüht, jedes \textit{named entity} erhält die Klasse \textit{NE}
+    zurückgeführt, jedes \textit{named entity} erhält die Klasse \textit{NE}
   \end{itemize}
 \end{frame}
 
@@ -51,7 +51,7 @@
     \item 21.028 Hyponyme
     \end{itemize}
 
-  \item Nach WordNet Filter
+  \item Nach Abgleich mit WordNet
     \begin{itemize}
     \item 5 Hypernyme
     \item 6 Hyponyme
