--- a/doc/presentation/final/sections/004_learning.tex
+++ b/doc/presentation/final/sections/004_learning.tex
@@ -9,8 +9,7 @@
   \item Lernen von Regeln
     \begin{itemize}
     \item Wörterbuch verwenden, um Regeln zu finden
-    \item Pendel-Algorithmus verwenden um neues Wissen aus gefundenen
-      Regeln zu generieren \cite{Biemann:2003}
+    \item Neues Wissen aus gefundenen Regeln generieren
     \item Wissen verwenden, um neues Wörterbuch zu erzeugen
     \item Wiederholen bis kein neues Wissen mehr erzeugt wird
     \end{itemize}
