--- a/doc/presentation/final/main.tex
+++ b/doc/presentation/final/main.tex
@@ -20,7 +20,14 @@
 \usecolortheme{beaver}
 \beamertemplatenavigationsymbolsempty
 
-\usetikzlibrary{fit,positioning,arrows}
+\usetikzlibrary{shapes,arrows}
+\tikzstyle{decision} = [diamond, draw, fill=gray!20, 
+    text width=10em, text badly centered, node distance=3cm, inner sep=0pt]
+\tikzstyle{block} = [rectangle, draw, fill=gray!20, 
+    text width=20em, text centered, rounded corners, minimum height=3em]
+\tikzstyle{line} = [draw, -latex']
+\tikzstyle{cloud} = [draw, ellipse,fill=yellow!20, node distance=2cm,
+    minimum height=2em]
 
 \title{Text Mining}
 \author{Andr\'{e} Vogler, Torsten Braun}
